# src/main/java/com/celonis/challenge/model/SimpleCounterTaskStatus.java
@@ -1,0 +1,16 @@
+package com.celonis.challenge.model;
+
+public enum SimpleCounterTaskStatus {
+    CREATED("created"), EXECUTING("executing"), CANCELLED("cancelled"), FINISHED("finished");
+
+    private final String status;
+
+    SimpleCounterTaskStatus(String status){
+        this.status = status;
+    }
+
+    @Override
+    public String toString(){
+        return status;
+    }
+}
